--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="progress-container progress-primary">
-                      <span class="progress-badge">Elektronika Industri</span>
+                      <span class="progress-badge">Elektronika</span>
                       <div class="progress">
                         <div
                           class="progress-bar progress-bar-primary"
@@ -242,14 +242,14 @@
                           aria-valuemax="100"
                           style="width: 80%"
                         ></div>
-                        <span class="progress-value">70%</span>
+                        <span class="progress-value">80%</span>
                       </div>
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="progress-container progress-primary">
                       <span class="progress-badge"
-                        >Elektronika Audio Vidoe</span
+                        >Elektronika Audio Vidio</span
                       >
                       <div class="progress">
                         <div
@@ -334,7 +334,7 @@
                   </div>
                   <div class="col-md-6">
                     <div class="progress-container progress-primary">
-                      <span class="progress-badge">Olahraga Sepak Bola</span>
+                      <span class="progress-badge">Olah raga Sepak Bola</span>
                       <div class="progress">
                         <div
                           class="progress-bar progress-bar-primary"
@@ -560,7 +560,7 @@
                       >
                         <a href="#Photography">
                           <figure class="cc-effect">
-                            <img src="images/photography-1.jpg" alt="Image" />
+                            <img src="images/photography-1.JPG" alt="Image" />
                             <figcaption>
                               <div class="h4">Mountain Photoshoot</div>
                               <p>Photography</p>
@@ -607,7 +607,7 @@
                       >
                         <a href="#Photography">
                           <figure class="cc-effect">
-                            <img src="images/photography-4.jpg" alt="Image" />
+                            <img src="images/photography-4.JPG" alt="Image" />
                             <figcaption>
                               <div class="h4">Garden Photoshoot</div>
                               <p>Photography</p>
