--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
                 >
                   <div class="card-body cc-education-header">
                     <p>2014 - 2017</p>
-                    <div class="h5">Ms Miftahul Anwar</div>
+                    <div class="h5">Mts Miftahul Anwar</div>
                   </div>
                 </div>
                 <div
